#652 Fixed code smells for: Day4CutsceneTest.java